<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_title"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_name"
                    android:inputType="text|textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietSurName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_surname"
                    android:inputType="text|textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tietBirthDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_birthdate"
                    android:inputType="datetime|date" />
            </com.google.android.material.textfield.TextInputLayout>


            <RadioGroup
                android:id="@+id/rgDriver"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:checkedButton="@id/rbNo"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/txt_license"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/rbNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_no" />

                <RadioButton
                    android:id="@+id/rbYes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_yes" />

            </RadioGroup>

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/swTurn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/txt_turn" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_modules"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbADA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_ada" />

            <CheckBox
                android:id="@+id/cbDI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_di" />

            <CheckBox
                android:id="@+id/cbPMDM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_pmdm" />

            <CheckBox
                android:id="@+id/cbPSP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_psp" />

            <CheckBox
                android:id="@+id/cbSGE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_sge" />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/txt_validate" />

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="casual"
                tools:text="Resultado obtenido del formulario" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>